@@ -26,6 +26,10 @@
 #' If this fails, we silently fall back to a copy.
 #' This mode is the default approach.
 #' \item \code{"symlink"}: create a symbolic link from the files in the original directory to the new \code{path}.
+#' Each symbolic link refers to an absolute path in the original directory, which is useful when the contents of \code{path} might be moved (but the original directory will not).
+#' \item \code{"relsymlink"}: create a symbolic link from the files in the original directory to the new \code{path}.
+#' Each symbolic link refers to an relative path to its corresponding file in the original directory,
+#' which is useful when both \code{path} and the original directory are moved together, e.g., as they are part of the same parent object like a SummarizedExperiment.
 #' \item \code{"none"}: ignore existing files and just save the contents by calling \code{"\link{saveObject,DelayedArray-method}"}.
 #' }
 #' 
@@ -90,32 +94,13 @@ setMethod("path", "ReloadedArraySeed", function(object, ...) object@path)
 
 #' @export
 setMethod("saveObject", "ReloadedArray", function(x, path, ReloadedArray.reuse.files="link", ...) {
-    ReloadedArray.reuse.files <- match.arg(ReloadedArray.reuse.files, c("none", "copy", "link", "symlink"))
+    ReloadedArray.reuse.files <- match.arg(ReloadedArray.reuse.files, c("none", "copy", "link", "symlink", "relsymlink"))
     s <- x@seed
     if (ReloadedArray.reuse.files == "none") {
         x <- DelayedArray(s@seed)
-        return(callNextMethod())
+        return(saveObject(x, path, ReloadedArray.reuse.files=ReloadedArray.reuse.files, ...))
     } 
 
-    manifest <- list.files(s@path, recursive=TRUE)
-    dir.create(path)
-
-    if (ReloadedArray.reuse.files == "symlink") {
-        fun <- file.symlink
-        msg <- "link"
-    } else if (ReloadedArray.reuse.files == "link") {
-        fun <- function(from, to) file.link(from, to) || file.copy(from, to)
-        msg <- "copy or link"
-    } else {
-        fun <- file.copy
-        msg <- "copy"
-    }
-
-    for (y in manifest) {
-        if (!fun(file.path(s@path, y), file.path(path, y))) {
-            stop("failed to ", msg, " '", y, "' from '", s@path, "' to '", path, "'")
-        }
-    }
-
+    clone_duplicate(s@path, path, action=ReloadedArray.reuse.files)
     invisible(NULL)
 })
